<resources>
    <string name="app_name">Sugar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">GitHub</string>

    <!--Login Page-->
    <string name="edit_hint_username">Please input username</string>
    <string name="edit_hint_password">Please input password</string>
    <string name="login_button_text">Login</string>
    <string name="username_is_empty">用户名不能为空</string>
    <string name="password_is_empty">密码不能为空</string>

    <!--Gank Page-->
    <string name="gank_page_empty_hint">数据加载出错啦~</string>

    <!--底部导航栏Bottom Bar-->
    <string name="bottom_bar_item_name_1">News</string>
    <string name="bottom_bar_item_name_2">Repositories</string>
    <string name="bottom_bar_item_name_3">Notifications</string>
    <string name="bottom_bar_item_name_4">Issues</string>
    <string name="bottom_bar_item_name_5">More</string>

    <!--用户信息页面-->
    <string name="user_info_unknown">N/A</string>
    <string name="user_info_zero">0</string>
    <string name="user_followers">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_joined_on">Joined on %1$s</string>

    <!--首页Repo页面-->
    <string name="main_repo_tab_owned">Owned</string>
    <string name="main_repo_tab_starred">Starred</string>
    <string name="main_repo_tab_trending">Trending</string>

    <!--首页Notification页面-->
    <string name="main_notification_tab_unread">Unread</string>
    <string name="main_notification_tab_all">All</string>

    <!--首页Issue页面-->
    <string name="main_issue_tab_open">Open</string>
    <string name="main_issue_tab_closed">Closed</string>

    <string name="main_more_feedback">帮助反馈</string>
    <string name="main_more_night_mode">夜间模式</string>
    <string name="main_more_settings">设置</string>
    <string name="main_more_logout">退出登录</string>
</resources>
