<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_split_line_color"
              android:orientation="vertical"
              tools:context=".view.fragment.MainMoreFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:background="@color/White">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/github_mark_120px"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/avatar"
            android:text="sylcrq"
            android:textSize="20sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_schedule_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/main_more_feedback"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/night_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_schedule_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/main_more_night_mode"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_schedule_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/main_more_settings"
        android:textColor="@color/text_color"/>

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/White"
        android:gravity="center"
        android:text="@string/main_more_logout"
        android:textColor="@color/Red"/>

</LinearLayout>
