<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <EditText
        android:id="@+id/edit_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/edit_hint_username"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="6dp" />

    <EditText
        android:id="@+id/edit_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_login_username"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_hint_password"
        android:drawableLeft="@drawable/ic_account_balance_black_24dp"
        android:drawableStart="@drawable/ic_account_balance_black_24dp"
        android:drawablePadding="6dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_login_password"
        android:layout_marginTop="10dp"
        android:text="@string/login_button_text"
        android:textSize="15sp"/>

    <ProgressBar
        android:id="@+id/loading_bar"
        style="@android:style/Widget.ProgressBar.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="10dp"
        android:visibility="gone" />
</RelativeLayout>
