<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_bg_color"
              android:orientation="vertical"
              tools:context="com.syl.sugar.view.fragment.SingleUserFragment">

    <RelativeLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:paddingTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/github_mark_120px_plus"
            app:civ_border_color="@color/text_color_blue"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_avatar"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/user_info_unknown"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/user_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/user_info_unknown"
            android:textColor="@color/text_color"
            android:textStyle="bold"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/user_follow_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/White"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_info_zero"
                android:textColor="@color/text_color_blue"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_followers"/>

        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/page_split_line_color"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_info_zero"
                android:textColor="@color/text_color_blue"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/user_following"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/user_company_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_group_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/user_info_unknown"
        android:textColor="@color/text_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/page_split_line_color"/>

    <TextView
        android:id="@+id/user_location_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_location_on_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/user_info_unknown"
        android:textColor="@color/text_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/page_split_line_color"/>

    <TextView
        android:id="@+id/user_email_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/user_info_unknown"
        android:textColor="@color/text_color_blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/page_split_line_color"/>

    <TextView
        android:id="@+id/user_blog_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_link_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/user_info_unknown"
        android:textColor="@color/text_color_blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/page_split_line_color"/>

    <TextView
        android:id="@+id/user_joined_date_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/White"
        android:drawableLeft="@drawable/ic_schedule_black_24dp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/user_info_unknown"
        android:textColor="@color/text_color"/>

</LinearLayout>
